--- a/package.json
+++ b/package.json
@@ -1,6 +1,6 @@
 {
   "name": "file_uploader",
-  "homepage": "https://ChirathD.github.io/file-uploader/",
+  "homepage": "https://ChirathD.github.io/ClaimManagement/",
   "version": "0.1.0",
   "private": true,
   "dependencies": {
